# pot-o-validator

./: .dockerignore  .gitignore  CHANGELOG.md  CLI_AND_ESP_GUIDE.md  CRATES_IO_CHECKLIST.md  Cargo.toml  DEVICES.md  Dockerfile  GIT_HYGIENE_AND_RELEASE_PREP.md  MIGRATION_GUIDE.md  ONION_POT_DESIGN.md  PHASE_2_COMPLETION_REPORT.md  README.md  SECURITY.md  SERVICE_ARCHITECTURE_REVIEW.md  TESTING_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_RESULTS_SUMMARY.md  TEST_TARGETS_QUICK_REFERENCE.txt
.github/: DEPLOYMENT_READY.md  FUNDING.yml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  TESTING_WORKFLOW.md  UPSTREAM_RELEASE.md  WORKFLOW_README.md
.github/scripts/: setup-workflow.sh  update-dependencies.sh  validate-workflow.sh
.github/workflows/: ci.yml  publish.yml  upstream-release.yml
ai3-lib/: Cargo.toml  README.md
ai3-lib/src/: esp_compat.rs  lib.rs  mining.rs  operations.rs  tensor.rs
ai3-lib/tests/: ai3_lib_tests.rs  engine_smoke.rs
config/: default.toml
core/: CONTRIBUTING.md  Cargo.toml  README.md
core/.github/workflows/: release.yml
core/src/: error.rs  lib.rs
core/src/math/: mod.rs
core/src/tensor/: constants.rs  entropy.rs  mod.rs
core/src/types/: mod.rs  tensor_network.rs
core/tests/: block_transaction_tests.rs  error_tests.rs  lib_api_tests.rs  tensor_network_types_tests.rs
extensions/: Cargo.toml  README.md
extensions/.github/workflows/: ci.yml
extensions/src/: chain_bridge.rs  defi.rs  device_protocol.rs  lib.rs  peer_network.rs  pool_strategy.rs  security.rs
extensions/tests/: extensions_tests.rs
firmware/esp-pot-o-miner/: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  platformio.ini  sdkconfig.defaults
firmware/esp-pot-o-miner/.github/workflows/: ci.yml  release.yml
firmware/esp-pot-o-miner/include/: neural_path.h  pot_o_config.h  sha256_util.h  tensor_ops.h
firmware/esp-pot-o-miner/lib/pot_o_firmware_core/: README.md  library.json
firmware/esp-pot-o-miner/lib/pot_o_firmware_core/include/pot_o/: mml_score.h  neural_path.h  pot_o_config.h  sha256_util.h  tensor_ops.h
firmware/esp-pot-o-miner/lib/pot_o_firmware_core/src/: mml_score.c  neural_path_core.c  sha256_util.c  tensor_ops_base.c  tensor_ops_fast_esp32.c  tensor_ops_fast_esp8266.c
firmware/esp-pot-o-miner/src/: main.cpp
keys/: README.md  miner.json  relayer.json
mining/: Cargo.toml  README.md  SECURITY.md
mining/src/: challenge.rs  lib.rs  mml_path.rs  neural_path.rs  pot_o.rs
mining/tests/: mining_tests.rs
src/: config.rs  consensus.rs  device_registry.rs  extensions_bootstrap.rs  http_api.rs  lib.rs  main.rs
tests/: http_status_smoke.rs  integration_tests.rs
tests/fixtures/: pot_o_mml_vectors.json
