[package]
name = "ai3-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
pot-o-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
