[package]
name = "ai3-lib"
version = "0.1.6-alpha"
edition = "2021"
authors = ["TribeWarez"]
description = "AI3 support library for PoT-O validator and miner components"
license = "MIT"
repository = "https://github.com/tribewarez/ai3-lib"
homepage = "https://pot.rpc.gateway.tribewarez.com"
documentation = "https://docs.rs/ai3-lib"
readme = "README.md"
keywords = ["pot-o", "tensor", "mining", "esp", "ai3"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
pot-o-core = "0.1.6-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
