[package]
name = "pot-o-core"
version = "0.1.6-alpha"
edition = "2021"
authors = ["TribeWarez"]
description = "Core types and utilities for PoT-O (Proof of Tensor Optimizations)"
license = "MIT"
repository = "https://github.com/tribewarez/pot-o-core"
homepage = "https://pot.rpc.gateway.tribewarez.com"
documentation = "https://docs.rs/pot-o-core"
readme = "README.md"
keywords = ["pot-o", "tribewarez", "blockchain", "tensor", "consensus"]
categories = ["cryptography::cryptocurrency", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
