[package]
name = "pot-o-extensions"
version = "0.1.0"
edition = "2021"

[dependencies]
pot-o-core = { path = "../core" }
ai3-lib = { path = "../ai3-lib" }
pot-o-mining = { path = "../mining" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
anyhow = "1.0"
