[package]
name = "pot-o-extensions"
version = "0.1.0"
edition = "2021"
authors = ["TribeWarez"]
description = "DeFi, staking, and external-chain extensions for the PoT-O validator"
license = "MIT"
repository = "https://github.com/tribewarez/pot-o-extensions"
homepage = "https://pot.rpc.gateway.tribewarez.com"
documentation = "https://docs.rs/pot-o-extensions"
readme = "README.md"
keywords = ["pot-o", "tribewarez", "blockchain", "defi", "staking", "extensions"]
categories = ["cryptography::cryptocurrency", "development-tools"]

[dependencies]
pot-o-core = "0.1"
ai3-lib = "0.1"
pot-o-mining = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
anyhow = "1.0"
borsh = "0.10"
hex = "0.4"
sha2 = "0.10"
