[package]
name = "pot-o-mining"
version = "0.1.0"
edition = "2021"

[dependencies]
pot-o-core = { path = "../core" }
ai3-lib = { path = "../ai3-lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
