[package]
name = "pot-o-mining"
version = "0.1.0"
edition = "2021"
authors = ["TribeWarez"]
description = "Mining coordination and neural-path logic for PoT-O"
license = "MIT"
repository = "https://github.com/tribewarez/pot-o-mining"
homepage = "https://pot.rpc.gateway.tribewarez.com"
documentation = "https://docs.rs/pot-o-mining"
readme = "README.md"

[dependencies]
pot-o-core = "0.1"
ai3-lib = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
